--- a/assets/styles/elements/elements.page.scss
+++ b/assets/styles/elements/elements.page.scss
@@ -31,8 +31,10 @@
   position: relative;
   background-color: $neutral-00;
   color: $darkest;
+  width: 100%;
 }
 
 body {
+  width: 100%;
   background-color: $neutral-95;
 }
