--- a/assets/styles/objects/objects.code.scss
+++ b/assets/styles/objects/objects.code.scss
@@ -25,6 +25,7 @@
   font-family: $font-mono;
   font-size: $font-size-md;
   font-weight: $font-weight-regular;
+  line-height: 1.5;
 }
 
 
